subida de figuras del paper para readme

--- a/results/algo_compare.ipynb
+++ b/results/algo_compare.ipynb
@@ -1019,9 +1019,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (GA-Hospital)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ga-hospital"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
