--- a/statistical analisis/notebooks/05_visualization.ipynb
+++ b/statistical analisis/notebooks/05_visualization.ipynb
@@ -488,9 +488,9 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "Python (GA-Hospital)",
             "language": "python",
-            "name": "python3"
+            "name": "ga-hospital"
         },
         "language_info": {
             "codemirror_mode": {
@@ -502,7 +502,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.10"
+            "version": "3.11.14"
         }
     },
     "nbformat": 4,
