feat: Update convergence comparison to include NSGA2 and remove commented-out GA runner configurations.

--- a/convergence.ipynb
+++ b/convergence.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convergence Comparison: GA, SA, and (μ+λ) ES"
+    "# Convergence Comparison: GA, SA, (μ+λ) ES, NSGA2"
    ]
   },
   {
